Change Github Page -> Edit on Github

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ save_steps(expr)
           <h2>Access Paper:</h2>
           <ul>
              <li><a href="https://raw.githubusercontent.com/thomasahle/tensorgrad/main/paper/cookbook.pdf"><strong>View PDF</strong></a></li>
-             <li><a href="https://github.com/thomasahle/tensorgrad/">Github Page</a></li>
+             <li><a href="https://github.com/thomasahle/tensorgrad/">Edit on Github</a></li>
           </ul>
        </div>
 
@@ -288,7 +288,7 @@ save_steps(expr)
        <div id="mobile-top">
           <p>By <a href="https://thomasahle.com">Thomas Ahle</a> @ <a href="https://x.com/thomasahle">twitter.com/thomasahle</a>.</p>
           <a href="https://raw.githubusercontent.com/thomasahle/tensorgrad/main/paper/cookbook.pdf" class="button">View PDF</a>
-          <a href="https://github.com/thomasahle/tensorgrad/" class="button">Github Page</a>
+          <a href="https://github.com/thomasahle/tensorgrad/" class="button">Edit on Github</a>
        </div>
 
        <div id="topics">
