fixed missing picture

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             It turns out all the trouble with tensors disappears when you instead represent them using graphs:
           </p>
           <div class="diagram">
-             <img src="paper/figures/front.png" alt="Tensor Diagram Example" />
+             <img src="front.png" alt="Tensor Diagram Example" />
           </div>
           <p>
             This book aims to <strong>standardize the notation for tensor diagrams</strong> by rewriting the classical
