--- a/index.html
+++ b/index.html
@@ -223,30 +223,23 @@
     <div class="container">
        <!-- MAIN CONTENT AREA -->
        <div class="main-content">
-          <h2>What are Tensor Diagrams?</h2>
           <p>
-            Machine learning involves a lot of tensor manipulation, and it's easy to lose track of the bigger picture when manipulating high-dimensional data using notation designed for vectors and matrices.
+            Machine learning involves a lot of tensor manipulation, and it's easy to lose track of the larger structure when manipulating high-dimensional data using notation designed for vectors and matrices.
           </p>
           <p>
-            It turns out all the trouble with tensors disappears when you instead represent them using graphs:
+            Graphical notation (first introduced by <a href="https://en.wikipedia.org/wiki/Penrose_graphical_notation">Roger Penrose in 1971</a>) reduces the mental overhead and makes the connections "come alive":
           </p>
           <div class="diagram">
              <img src="front.png" alt="Tensor Diagram Example" />
           </div>
           <p>
-            This book aims to <strong>standardize the notation for tensor diagrams</strong> by rewriting the classical
-            "<a href="https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf">Matrix Cookbook</a>" using this notation.
-          </p>
-          <p>
-            Tensor diagrams are better than alternative notation like Index Notation (einsum) because they:
-          </p>
-          <ul>
-             <li>Make it easy to spot patterns and symmetries</li>
-             <li>Avoid all trouble with vectorization and Kronecker products</li>
-             <li>Make Matrix Calculus simple and intuitive</li>
-             <li>Represent functions and broadcasting effortlessly</li>
-          </ul>
-
+            In short, each edge is the index of a tensor, and connecting two edges contracts the tensors over this dimension. After a bit of practice, this becomes incredibly intuitive.
+            </p>
+           <p>
+            The Tensor Cookbook aims to popularize tensor diagrams by rewriting the classical
+            "<a href="https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf">Matrix Cookbook</a>" this way.
+               You can think of it as a reference book, skip around for some cool diagrams,
+               or a crash course full of exercises to practice your skill.
           <h2>Tensorgrad</h2>
           <p>is a <a href="https://github.com/thomasahle/tensorgrad/">python library</a>
             for symbolic tensor manipulation and derivatives using tensor diagrams.
@@ -320,11 +313,12 @@ save_steps(expr)
        <div id="other-resources">
           <h2>Other Resources:</h2>
           <ul class="inline-list">
-             <li><a href="https://en.wikipedia.org/wiki/Penrose_graphical_notation">Penrose Graphical Notation</a></li>
              <li><a href="https://www.lesswrong.com/posts/BQKKQiBmc63fwjDrj/graphical-tensor-notation-for-interpretability">Graphical Tensor Notation for Interpretability</a></li>
-             <li><a href="https://www.math3ma.com/blog/the-tensor-product-demystified">The Tensor Product, Demystified</a></li>
+             <li><a href="https://www.math3ma.com/blog/matrices-as-tensor-network-diagrams">Matrices as Tensor Network Diagrams</a></li>
              <li><a href="https://tensornetwork.org/diagrams/">Tensor Network Diagrams</a></li>
+             <li><a href="https://www.tensors.net/p-tutorial-1">Tensor Network Tutorial</a></li>
              <li><a href="https://www.matrixcalculus.org/">Matrix Calculus</a></li>
+             <li><a href="https://arxiv.org/pdf/1603.03039">Hand-waving and Interpretive Dance</a></li>
              <li><a href="https://arxiv.org/abs/1912.10049">Lectures on Quantum Tensor Networks</a></li>
           </ul>
        </div>
