--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
          padding: 0 20px;
       }
       h1 {
-         padding: 20px 0 0 20px;
+         padding: 30px 0 0 20px;
       }
       footer {
          padding: 10px 20px;
@@ -223,6 +223,7 @@
     <div class="container">
        <!-- MAIN CONTENT AREA -->
        <div class="main-content">
+          <h2>What are Tensor Diagrams?</h2>
           <p>
             Machine learning involves a lot of tensor manipulation, and it's easy to lose track of the larger structure when manipulating high-dimensional data using notation designed for vectors and matrices.
           </p>
@@ -236,8 +237,8 @@
             In short, each edge is the index of a tensor, and connecting two edges contracts the tensors over this dimension. After a bit of practice, this becomes incredibly intuitive.
             </p>
            <p>
-            The Tensor Cookbook aims to popularize tensor diagrams by rewriting the classical
-            "<a href="https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf">Matrix Cookbook</a>" this way.
+            The Tensor Cookbook aims to <strong>popularize tensor diagrams by rewriting the classical
+            "<a href="https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf">Matrix Cookbook</a>"</strong>.
                You can think of it as a reference book, skip around for some cool diagrams,
                or a crash course full of exercises to practice your skill.
           <h2>Tensorgrad</h2>
