--- a/index.html
+++ b/index.html
@@ -288,11 +288,12 @@ save_steps(expr)
        <div id="topics">
           <h2>Topics:</h2>
           <ul class="inline-list">
-             <li>Introduction to tensor diagrams</li>
+             <li>Matrix Calculus</li>
              <li>Simple and advanced derivatives</li>
              <li>Statistics and probability</li>
              <li>Kronecker and Vec operators</li>
              <li>Special matrices and decompositions</li>
+             <li>Functions and broadcasting</li>
              <li>Machine learning applications</li>
              <li>And much more!</li>
           </ul>
