--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <!-- Buttons and output area -->
           <div id="code-buttons">
-             <button class="button small-button" id="runBtn" onclick="runCode(indexEditor, 'runBtn', 'output', 'error')">Run</button>
+             <button class="button small-button" id="runBtn">Run</button>
              <button class="button small-button" id="shareBtn">Share</button>
           </div>
 
