--- a/playground.html
+++ b/playground.html
@@ -22,8 +22,7 @@
       <div id="imageContainer" class="image-container"></div>
     </div>
     <!-- Sidebar: controls for examples/snippet URL and Run/Format/Share buttons -->
-    <div class="sidebar">
-      <div id="controlContainer">
+      <div id="control-container">
         <h2></h2>
         <!-- This section will show either the examples dropdown or the snippet URL -->
         <select id="exampleSelectSidebar" style="display:block; visibility:hidden"></select>
@@ -33,7 +32,14 @@
         <button class="button" id="runBtn">Run</button>
         <!--<button class="button" id="formatBtn">Format</button>-->
       </div>
-    </div>
+
+       <div id="tensorgrad-info">
+          <h2>Tensorgrad:</h2>
+          <ul>
+             <li><a href="https://tensorcookbook.com/docs/">Documentation</a></li>
+             <li><a href="https://github.com/thomasahle/tensorgrad/">Edit on Github</a></li>
+          </ul>
+       </div>
   </div>
   <footer>
     <hr />
