Add header tags

--- a/playground.html
+++ b/playground.html
@@ -2,14 +2,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Tensorgrad Playground</title>
-  
-  <!-- Shared CSS -->
-  <link rel="stylesheet" href="styles.css" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8JHF8QM6N"></script>
+    <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'G-E8JHF8QM6N');
+    </script>
 
-  <!-- CodeMirror CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css" />
+    <link rel="icon" type="image/png" href="media/favicon.png">
+
+    <meta name="description"
+          content="The Tensor Cookbook is a comprehensive guide to tensors,
+                   using the visual language of tensor diagrams. It closely follows
+                   the legendary 'Matrix Cookbook' while providing a new way to understand
+                   and appreciate tensor operations through diagrams.">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tensorgrad Playground</title>
+
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css" />
 </head>
 <body>
   <h1><a href="index.html">The Tensor Cookbook</a></h1>
