--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           <ul>
              <li><a href="https://raw.githubusercontent.com/thomasahle/tensorgrad/main/paper/cookbook.pdf"><strong>View PDF</strong></a></li>
              <li><a href="https://github.com/thomasahle/tensorgrad/">Edit on Github</a></li>
+             <li><a href="https://tensorcookbook.com/playground/">Playground</a></li>
           </ul>
        </div>
 
