--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <h2>Access Paper:</h2>
           <ul>
              <li><a href="https://raw.githubusercontent.com/thomasahle/tensorgrad/main/paper/cookbook.pdf"><strong>View PDF</strong></a></li>
-             <li><a href="https://github.com/thomasahle/tensorgrad/">Edit on Github</a></li>
-             <li><a href="https://tensorcookbook.com/playground/">Playground</a></li>
+             <li><a href="https://github.com/thomasahle/tensorgrad">Edit on Github</a></li>
+             <li><a href="https://tensorcookbook.com/playground">Playground</a></li>
           </ul>
        </div>
 
